tests/ui/error-codes/E0117.stderr
error[E0120]: the `Drop` trait may only be implemented for local structs, enums, and unions
  --> $DIR/E0117.rs:1:15
   |
LL | impl Drop for u32 {}
   |               ^^^ must be a struct, enum, or union in the current crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0120`.
