tests/ui/error-codes/E0117.rs
impl Drop for u32 {} //~ ERROR E0120

fn main() {}
